creusot/tests/should_fail/prusti/logic/home_mismatch2.stderr
error[creusot]: expected `X` found `creusot_contracts::prusti_prelude::Zombie<X>`
 --> home_mismatch2.rs:6:5
  |
6 |     x
  |     ^

error: aborting due to previous error

